--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,34 @@
 {
   "name": "trk/component",
-    "description": "",
-    "type": "pw-module",
-    "keywords": [
-        "totoglu",
-        "wire",
-        "component"
-    ],
-    "homepage": "https://github.com/trk/Htmx",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Iskender TOTOGLU",
-            "email": "iskender@totoglu.com",
-            "homepage": "https://totoglu.com/"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "Totoglu\\Component\\": [
-                "src"
-            ]
-        },
-        "files": [
-            "src/functions.php",
-            "FunctionsAPI.php"
-        ]
+  "description": "Module help you to create and use set of components to utilise in your ProcessWire page templates.",
+  "type": "pw-module",
+  "keywords": [
+    "totoglu",
+    "wire",
+    "component"
+  ],
+  "homepage": "https://github.com/trk/Htmx",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Iskender TOTOGLU",
+      "email": "iskender@totoglu.com",
+      "homepage": "https://totoglu.com/"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Totoglu\\Component\\": [
+        "src"
+      ]
     },
+    "files": [
+      "src/functions.php",
+      "FunctionsAPI.php"
+    ]
+  },
   "require": {
-      "php": ">=8.1"
+    "php": ">=8.1"
   },
   "config": {
     "process-timeout": 0,
